@@ -37,13 +37,13 @@ import java.util.Hashtable;
  */
 public class CffTable implements Table {
 
-    public class Dict {
+    public static class Dict {
 
-        private Dictionary<Integer, Object> _entries = new Hashtable<Integer, Object>();
-        private int[] _data;
+        private final Dictionary<Integer, Object> _entries = new Hashtable<Integer, Object>();
+        private final int[] _data;
         private int _index;
 
-        protected Dict(int[] data, int offset, int length) {
+        protected Dict(final int[] data, final int offset, final int length) {
             _data = data;
             _index = offset;
             while (_index < offset + length) {
@@ -51,12 +51,12 @@ public class CffTable implements Table {
             }
         }
 
-        public Object getValue(int key) {
+        public Object getValue(final int key) {
             return _entries.get(key);
         }
 
         private boolean addKeyAndValueEntry() {
-            ArrayList<Object> operands = new ArrayList<Object>();
+            final ArrayList<Object> operands = new ArrayList<Object>();
             Object operand = null;
             while (isOperandAtIndex()) {
                 operand = nextOperand();
@@ -76,7 +76,7 @@ public class CffTable implements Table {
         }
 
         private boolean isOperandAtIndex() {
-            int b0 = _data[_index];
+            final int b0 = _data[_index];
             if ((32 <= b0 && b0 <= 254)
                     || b0 == 28
                     || b0 == 29
@@ -87,7 +87,7 @@ public class CffTable implements Table {
         }
 
         private boolean isOperatorAtIndex() {
-            int b0 = _data[_index];
+            final int b0 = _data[_index];
             if (0 <= b0 && b0 <= 21) {
                 return true;
             }
@@ -95,44 +95,44 @@ public class CffTable implements Table {
         }
 
         private Object nextOperand() {
-            int b0 = _data[_index];
+            final int b0 = _data[_index];
             if (32 <= b0 && b0 <= 246) {
 
                 // 1 byte integer
                 ++_index;
-                return new Integer(b0 - 139);
+                return Integer.valueOf(b0 - 139);
             } else if (247 <= b0 && b0 <= 250) {
 
                 // 2 byte integer
-                int b1 = _data[_index + 1];
+                final int b1 = _data[_index + 1];
                 _index += 2;
-                return new Integer((b0 - 247) * 256 + b1 + 108);
+                return Integer.valueOf((b0 - 247) * 256 + b1 + 108);
             } else if (251 <= b0 && b0 <= 254) {
 
                 // 2 byte integer
-                int b1 = _data[_index + 1];
+                final int b1 = _data[_index + 1];
                 _index += 2;
-                return new Integer(-(b0 - 251) * 256 - b1 - 108);
+                return Integer.valueOf(-(b0 - 251) * 256 - b1 - 108);
             } else if (b0 == 28) {
 
                 // 3 byte integer
-                int b1 = _data[_index + 1];
-                int b2 = _data[_index + 2];
+                final int b1 = _data[_index + 1];
+                final int b2 = _data[_index + 2];
                 _index += 3;
-                return new Integer(b1 << 8 | b2);
+                return Integer.valueOf(b1 << 8 | b2);
             } else if (b0 == 29) {
 
                 // 5 byte integer
-                int b1 = _data[_index + 1];
-                int b2 = _data[_index + 2];
-                int b3 = _data[_index + 3];
-                int b4 = _data[_index + 4];
+                final int b1 = _data[_index + 1];
+                final int b2 = _data[_index + 2];
+                final int b3 = _data[_index + 3];
+                final int b4 = _data[_index + 4];
                 _index += 5;
-                return new Integer(b1 << 24 | b2 << 16 | b3 << 8 | b4);
+                return Integer.valueOf(b1 << 24 | b2 << 16 | b3 << 8 | b4);
             } else if (b0 == 30) {
 
                 // Real number
-                StringBuilder fString = new StringBuilder();
+                final StringBuilder fString = new StringBuilder();
                 int nibble1 = 0;
                 int nibble2 = 0;
                 ++_index;
@@ -143,13 +143,13 @@ public class CffTable implements Table {
                     fString.append(decodeRealNibble(nibble1));
                     fString.append(decodeRealNibble(nibble2));
                 }
-                return new Float(fString.toString());
+                return Float.valueOf(fString.toString());
             } else {
                 return null;
             }
         }
 
-        private String decodeRealNibble(int nibble) {
+        private String decodeRealNibble(final int nibble) {
             if (nibble < 0xa) {
                 return Integer.toString(nibble);
             } else if (nibble == 0xa) {
@@ -166,10 +166,10 @@ public class CffTable implements Table {
 
         @Override
         public String toString() {
-            StringBuilder sb = new StringBuilder();
-            Enumeration<Integer> keys = _entries.keys();
+            final StringBuilder sb = new StringBuilder();
+            final Enumeration<Integer> keys = _entries.keys();
             while (keys.hasMoreElements()) {
-                Integer key = keys.nextElement();
+                final Integer key = keys.nextElement();
                 if ((key.intValue() & 0xc00) == 0xc00) {
                     sb.append("12 ").append(key.intValue() & 0xff).append(": ");
                 } else {
@@ -183,12 +183,12 @@ public class CffTable implements Table {
 
     public class Index {
 
-        private int _count;
-        private int _offSize;
-        private int[] _offset;
-        private int[] _data;
+        private final int _count;
+        private final int _offSize;
+        private final int[] _offset;
+        private final int[] _data;
 
-        protected Index(DataInput di) throws IOException {
+        protected Index(final DataInput di) throws IOException {
             _count = di.readUnsignedShort();
             _offset = new int[_count + 1];
             _offSize = di.readUnsignedByte();
@@ -209,7 +209,7 @@ public class CffTable implements Table {
             return _count;
         }
 
-        public int getOffset(int index) {
+        public int getOffset(final int index) {
             return _offset[index];
         }
 
@@ -223,7 +223,7 @@ public class CffTable implements Table {
 
         @Override
         public String toString() {
-            StringBuilder sb = new StringBuilder();
+            final StringBuilder sb = new StringBuilder();
             sb.append("DICT\n");
             sb.append("count: ").append(_count).append("\n");
             sb.append("offSize: ").append(_offSize).append("\n");
@@ -246,19 +246,19 @@ public class CffTable implements Table {
 
     public class TopDictIndex extends Index {
 
-        protected TopDictIndex(DataInput di) throws IOException {
+        protected TopDictIndex(final DataInput di) throws IOException {
             super(di);
         }
 
-        public Dict getTopDict(int index) {
-            int offset = getOffset(index) - 1;
-            int len = getOffset(index + 1) - offset - 1;
+        public Dict getTopDict(final int index) {
+            final int offset = getOffset(index) - 1;
+            final int len = getOffset(index + 1) - offset - 1;
             return new Dict(getData(), offset, len);
         }
 
         @Override
         public String toString() {
-            StringBuilder sb = new StringBuilder();
+            final StringBuilder sb = new StringBuilder();
             for (int i = 0; i < getCount(); ++i) {
                 sb.append(getTopDict(i).toString()).append("\n");
             }
@@ -268,18 +268,18 @@ public class CffTable implements Table {
 
     public class NameIndex extends Index {
 
-        protected NameIndex(DataInput di) throws IOException {
+        protected NameIndex(final DataInput di) throws IOException {
             super(di);
         }
 
-        public String getName(int index) {
+        public String getName(final int index) {
             String name = null;
-            int offset = getOffset(index) - 1;
-            int len = getOffset(index + 1) - offset - 1;
+            final int offset = getOffset(index) - 1;
+            final int len = getOffset(index + 1) - offset - 1;
 
             // Ensure the name hasn't been deleted
             if (getData()[offset] != 0) {
-                StringBuilder sb = new StringBuilder();
+                final StringBuilder sb = new StringBuilder();
                 for (int i = offset; i < offset + len; ++i) {
                     sb.append((char) getData()[i]);
                 }
@@ -292,7 +292,7 @@ public class CffTable implements Table {
 
         @Override
         public String toString() {
-            StringBuilder sb = new StringBuilder();
+            final StringBuilder sb = new StringBuilder();
             for (int i = 0; i < getCount(); ++i) {
                 sb.append(getName(i)).append("\n");
             }
@@ -302,7 +302,7 @@ public class CffTable implements Table {
 
     public class StringIndex extends Index {
 
-        protected StringIndex(DataInput di) throws IOException {
+        protected StringIndex(final DataInput di) throws IOException {
             super(di);
         }
 
@@ -314,10 +314,10 @@ public class CffTable implements Table {
                 if (index >= getCount()) {
                     return null;
                 }
-                int offset = getOffset(index) - 1;
-                int len = getOffset(index + 1) - offset - 1;
+                final int offset = getOffset(index) - 1;
+                final int len = getOffset(index + 1) - offset - 1;
 
-                StringBuilder sb = new StringBuilder();
+                final StringBuilder sb = new StringBuilder();
                 for (int i = offset; i < offset + len; ++i) {
                     sb.append((char) getData()[i]);
                 }
@@ -327,8 +327,8 @@ public class CffTable implements Table {
 
         @Override
         public String toString() {
-            int nonStandardBase = CffStandardStrings.standardStrings.length;
-            StringBuilder sb = new StringBuilder();
+            final int nonStandardBase = CffStandardStrings.standardStrings.length;
+            final StringBuilder sb = new StringBuilder();
             for (int i = 0; i < getCount(); ++i) {
                 sb.append(nonStandardBase + i).append(": ");
                 sb.append(getString(nonStandardBase + i)).append("\n");
@@ -346,7 +346,7 @@ public class CffTable implements Table {
             return _first;
         }
 
-        protected void setFirst(int first) {
+        protected void setFirst(final int first) {
             _first = first;
         }
 
@@ -354,14 +354,14 @@ public class CffTable implements Table {
             return _left;
         }
 
-        protected void setLeft(int left) {
+        protected void setLeft(final int left) {
             _left = left;
         }
     }
 
     private class CharsetRange1 extends CharsetRange {
 
-        protected CharsetRange1(DataInput di) throws IOException {
+        protected CharsetRange1(final DataInput di) throws IOException {
             setFirst(di.readUnsignedShort());
             setLeft(di.readUnsignedByte());
         }
@@ -369,7 +369,7 @@ public class CffTable implements Table {
 
     private class CharsetRange2 extends CharsetRange {
 
-        protected CharsetRange2(DataInput di) throws IOException {
+        protected CharsetRange2(final DataInput di) throws IOException {
             setFirst(di.readUnsignedShort());
             setLeft(di.readUnsignedShort());
         }
@@ -384,9 +384,9 @@ public class CffTable implements Table {
 
     private class CharsetFormat0 extends Charset {
 
-        private int[] _glyph;
+        private final int[] _glyph;
 
-        protected CharsetFormat0(DataInput di, int glyphCount) throws IOException {
+        protected CharsetFormat0(final DataInput di, final int glyphCount) throws IOException {
             _glyph = new int[glyphCount - 1];  // minus 1 because .notdef is omitted
             for (int i = 0; i < glyphCount - 1; ++i) {
                 _glyph[i] = di.readUnsignedShort();
@@ -399,7 +399,7 @@ public class CffTable implements Table {
         }
 
         @Override
-        public int getSID(int gid) {
+        public int getSID(final int gid) {
             if (gid == 0) {
                 return 0;
             }
@@ -409,12 +409,12 @@ public class CffTable implements Table {
 
     private class CharsetFormat1 extends Charset {
 
-        private ArrayList<CharsetRange> _charsetRanges = new ArrayList<CharsetRange>();
+        private final ArrayList<CharsetRange> _charsetRanges = new ArrayList<CharsetRange>();
 
-        protected CharsetFormat1(DataInput di, int glyphCount) throws IOException {
+        protected CharsetFormat1(final DataInput di, final int glyphCount) throws IOException {
             int glyphsCovered = glyphCount - 1;  // minus 1 because .notdef is omitted
             while (glyphsCovered > 0) {
-                CharsetRange range = new CharsetRange1(di);
+                final CharsetRange range = new CharsetRange1(di);
                 _charsetRanges.add(range);
                 glyphsCovered -= range.getLeft() + 1;
             }
@@ -426,17 +426,17 @@ public class CffTable implements Table {
         }
 
         @Override
-        public int getSID(int gid) {
+        public int getSID(final int gid) {
             if (gid == 0) {
                 return 0;
             }
 
             // Count through the ranges to find the one of interest
             int count = 0;
-            for (CharsetRange range : _charsetRanges) {
+            for (final CharsetRange range : _charsetRanges) {
                 count += range.getLeft();
                 if (gid < count) {
-                    int sid = gid - count + range.getFirst();
+                    final int sid = gid - count + range.getFirst();
                     return sid;
                 }
             }
@@ -446,12 +446,12 @@ public class CffTable implements Table {
 
     private class CharsetFormat2 extends Charset {
 
-        private ArrayList<CharsetRange> _charsetRanges = new ArrayList<CharsetRange>();
+        private final ArrayList<CharsetRange> _charsetRanges = new ArrayList<CharsetRange>();
 
-        protected CharsetFormat2(DataInput di, int glyphCount) throws IOException {
+        protected CharsetFormat2(final DataInput di, final int glyphCount) throws IOException {
             int glyphsCovered = glyphCount - 1;  // minus 1 because .notdef is omitted
             while (glyphsCovered > 0) {
-                CharsetRange range = new CharsetRange2(di);
+                final CharsetRange range = new CharsetRange2(di);
                 _charsetRanges.add(range);
                 glyphsCovered -= range.getLeft() + 1;
             }
@@ -463,16 +463,16 @@ public class CffTable implements Table {
         }
 
         @Override
-        public int getSID(int gid) {
+        public int getSID(final int gid) {
             if (gid == 0) {
                 return 0;
             }
 
             // Count through the ranges to find the one of interest
             int count = 0;
-            for (CharsetRange range : _charsetRanges) {
+            for (final CharsetRange range : _charsetRanges) {
                 if (gid < range.getLeft() + count) {
-                    int sid = gid - count + range.getFirst() - 1;
+                    final int sid = gid - count + range.getFirst() - 1;
                     return sid;
                 }
                 count += range.getLeft();
@@ -481,23 +481,23 @@ public class CffTable implements Table {
         }
     }
 
-    private DirectoryEntry _de;
-    private int _major;
-    private int _minor;
-    private int _hdrSize;
-    private int _offSize;
-    private NameIndex _nameIndex;
-    private TopDictIndex _topDictIndex;
-    private StringIndex _stringIndex;
-    private Index _globalSubrIndex;
-    private Index _charStringsIndexArray[];
-    private Charset[] _charsets;
-    private Charstring[][] _charstringsArray;
+    private final DirectoryEntry _de;
+    private final int _major;
+    private final int _minor;
+    private final int _hdrSize;
+    private final int _offSize;
+    private final NameIndex _nameIndex;
+    private final TopDictIndex _topDictIndex;
+    private final StringIndex _stringIndex;
+    private final Index _globalSubrIndex;
+    private final Index _charStringsIndexArray[];
+    private final Charset[] _charsets;
+    private final Charstring[][] _charstringsArray;
 
-    private byte[] _buf;
+    private final byte[] _buf;
 
     /** Creates a new instance of CffTable */
-    protected CffTable(DirectoryEntry de, DataInput di) throws IOException {
+    protected CffTable(final DirectoryEntry de, final DataInput di) throws IOException {
         _de = (DirectoryEntry) de.clone();
 
         // Load entire table into a buffer, and create another input stream
@@ -537,15 +537,15 @@ public class CffTable implements Table {
             // Charstrings INDEX
             // We load this before Charsets because we may need to know the number
             // of glyphs
-            Integer charStringsOffset = (Integer) _topDictIndex.getTopDict(i).getValue(17);
+            final Integer charStringsOffset = (Integer) _topDictIndex.getTopDict(i).getValue(17);
             di2 = getDataInputForOffset(charStringsOffset);
             _charStringsIndexArray[i] = new Index(di2);
-            int glyphCount = _charStringsIndexArray[i].getCount();
+            final int glyphCount = _charStringsIndexArray[i].getCount();
 
             // Charsets
-            Integer charsetOffset = (Integer) _topDictIndex.getTopDict(i).getValue(15);
+            final Integer charsetOffset = (Integer) _topDictIndex.getTopDict(i).getValue(15);
             di2 = getDataInputForOffset(charsetOffset);
-            int format = di2.readUnsignedByte();
+            final int format = di2.readUnsignedByte();
             switch (format) {
                 case 0:
                     _charsets[i] = new CharsetFormat0(di2, glyphCount);
@@ -561,8 +561,8 @@ public class CffTable implements Table {
             // Create the charstrings
             _charstringsArray[i] = new Charstring[glyphCount];
             for (int j = 0; j < glyphCount; ++j) {
-                int offset = _charStringsIndexArray[i].getOffset(j) - 1;
-                int len = _charStringsIndexArray[i].getOffset(j + 1) - offset - 1;
+                final int offset = _charStringsIndexArray[i].getOffset(j) - 1;
+                final int len = _charStringsIndexArray[i].getOffset(j + 1) - offset - 1;
                 _charstringsArray[i][j] = new CharstringType2(
                         i,
                         _stringIndex.getString(_charsets[i].getSID(j)),
@@ -575,7 +575,7 @@ public class CffTable implements Table {
         }
     }
 
-    private DataInput getDataInputForOffset(int offset) {
+    private DataInput getDataInputForOffset(final int offset) {
         return new DataInputStream(new ByteArrayInputStream(
                 _buf, offset,
                 _de.getLength() - offset));
@@ -585,15 +585,15 @@ public class CffTable implements Table {
         return _nameIndex;
     }
 
-    public Charset getCharset(int fontIndex) {
+    public Charset getCharset(final int fontIndex) {
         return _charsets[fontIndex];
     }
 
-    public Charstring getCharstring(int fontIndex, int gid) {
+    public Charstring getCharstring(final int fontIndex, final int gid) {
         return _charstringsArray[fontIndex][gid];
     }
 
-    public int getCharstringCount(int fontIndex) {
+    public int getCharstringCount(final int fontIndex) {
         return _charstringsArray[fontIndex].length;
     }
 
@@ -604,7 +604,7 @@ public class CffTable implements Table {
 
     @Override
     public String toString() {
-        StringBuilder sb = new StringBuilder();
+        final StringBuilder sb = new StringBuilder();
         sb.append("'CFF' Table - Compact Font Format\n---------------------------------\n");
         sb.append("\nName INDEX\n");
         sb.append(_nameIndex.toString());
