@@ -48,6 +48,7 @@ import jogamp.newt.DisplayImpl.DisplayRunnable;
 import jogamp.newt.ScreenImpl;
 
 import com.jogamp.common.util.ArrayHashSet;
+import com.jogamp.common.util.PropertyAccess;
 import com.jogamp.common.util.VersionNumber;
 import com.jogamp.nativewindow.x11.X11GraphicsDevice;
 import com.jogamp.nativewindow.x11.X11GraphicsScreen;
@@ -59,7 +60,7 @@ public class ScreenDriver extends ScreenImpl {
 
     static {
         Debug.initSingleton();
-        DEBUG_TEST_RANDR13_DISABLED = Debug.isPropertyDefined("newt.test.Screen.disableRandR13", true);
+        DEBUG_TEST_RANDR13_DISABLED = PropertyAccess.isPropertyDefined("newt.test.Screen.disableRandR13", true);
 
         DisplayDriver.initSingleton();
     }
@@ -73,10 +74,10 @@ public class ScreenDriver extends ScreenImpl {
     @Override
     protected void createNativeImpl() {
         // validate screen index
-        Long handle = runWithLockedDisplayDevice( new DisplayImpl.DisplayRunnable<Long>() {
+        final Long handle = runWithLockedDisplayDevice( new DisplayImpl.DisplayRunnable<Long>() {
             @Override
-            public Long run(long dpy) {
-                return new Long(GetScreen0(dpy, screen_idx));
+            public Long run(final long dpy) {
+                return Long.valueOf(GetScreen0(dpy, screen_idx));
             } } );
         if (handle.longValue() == 0) {
             throw new RuntimeException("Error creating screen: " + screen_idx);
@@ -85,7 +86,7 @@ public class ScreenDriver extends ScreenImpl {
         final long dpy = x11dev.getHandle();
         aScreen = new X11GraphicsScreen(x11dev, screen_idx);
         {
-            int v[] = getRandRVersion0(dpy);
+            final int v[] = getRandRVersion0(dpy);
             randrVersion = new VersionNumber(v[0], v[1], 0);
         }
         {
@@ -111,7 +112,7 @@ public class ScreenDriver extends ScreenImpl {
     private RandR rAndR;
 
     @Override
-    protected final void collectNativeMonitorModesAndDevicesImpl(MonitorModeProps.Cache cache) {
+    protected final void collectNativeMonitorModesAndDevicesImpl(final MonitorModeProps.Cache cache) {
         if( null == rAndR ) { return; }
         final AbstractGraphicsDevice device = getDisplay().getGraphicsDevice();
         device.lock();
@@ -165,12 +166,14 @@ public class ScreenDriver extends ScreenImpl {
     }
 
     @Override
-    protected Rectangle getNativeMonitorDeviceViewportImpl(MonitorDevice monitor) {
+    protected boolean updateNativeMonitorDeviceViewportImpl(final MonitorDevice monitor, final Rectangle viewportPU, final Rectangle viewportWU) {
         final AbstractGraphicsDevice device = getDisplay().getGraphicsDevice();
         device.lock();
         try {
-            int[] viewportProps = rAndR.getMonitorDeviceViewport(device.getHandle(), this, monitor.getId());
-            return new Rectangle(viewportProps[0], viewportProps[1], viewportProps[2], viewportProps[3]);
+            final int[] viewportProps = rAndR.getMonitorDeviceViewport(device.getHandle(), this, monitor.getId());
+            viewportPU.set(viewportProps[0], viewportProps[1], viewportProps[2], viewportProps[3]);
+            viewportWU.set(viewportProps[0], viewportProps[1], viewportProps[2], viewportProps[3]); // equal window-units and pixel-units
+            return true;
         } finally {
             device.unlock();
         }
@@ -182,7 +185,7 @@ public class ScreenDriver extends ScreenImpl {
 
         return runWithLockedDisplayDevice( new DisplayImpl.DisplayRunnable<MonitorMode>() {
             @Override
-            public MonitorMode run(long dpy) {
+            public MonitorMode run(final long dpy) {
                 final int[] currentModeProps = rAndR.getCurrentMonitorModeProps(dpy, ScreenDriver.this, monitor.getId());
                 return MonitorModeProps.streamInMonitorMode(null, null, currentModeProps, 0);
             } } );
@@ -193,9 +196,9 @@ public class ScreenDriver extends ScreenImpl {
         if( null == rAndR ) { return false; }
 
         final long t0 = System.currentTimeMillis();
-        boolean done = runWithOptTempDisplayHandle( new DisplayImpl.DisplayRunnable<Boolean>() {
+        final boolean done = runWithOptTempDisplayHandle( new DisplayImpl.DisplayRunnable<Boolean>() {
             @Override
-            public Boolean run(long dpy) {
+            public Boolean run(final long dpy) {
                 return Boolean.valueOf( rAndR.setCurrentMonitorMode(dpy, ScreenDriver.this, monitor, mode) );
             }
         }).booleanValue();
@@ -207,10 +210,10 @@ public class ScreenDriver extends ScreenImpl {
         return done;
     }
 
-    private DisplayImpl.DisplayRunnable<Boolean> xineramaEnabledQueryWithTemp = new DisplayImpl.DisplayRunnable<Boolean>() {
+    private final DisplayImpl.DisplayRunnable<Boolean> xineramaEnabledQueryWithTemp = new DisplayImpl.DisplayRunnable<Boolean>() {
         @Override
-        public Boolean run(long dpy) {
-            return new Boolean(X11Util.XineramaIsEnabled(dpy));
+        public Boolean run(final long dpy) {
+            return Boolean.valueOf(X11Util.XineramaIsEnabled(dpy));
         } };
 
     @Override
@@ -225,8 +228,8 @@ public class ScreenDriver extends ScreenImpl {
     }
 
     @Override
-    protected void calcVirtualScreenOriginAndSize(final Rectangle vOriginSize) {
-        final RectangleImmutable ov = (RectangleImmutable) getViewport().cloneMutable();
+    protected void calcVirtualScreenOriginAndSize(final Rectangle viewport, final Rectangle viewportInWindowUnits) {
+        final RectangleImmutable ov = DEBUG ? (RectangleImmutable) getViewport().cloneMutable() : null;
         /**
         if( null != rAndR && rAndR.getVersion().compareTo(RandR.version130) >= 0 && getMonitorDevices().size()>0 ) {
             super.calcVirtualScreenOriginAndSize(vOriginSize);
@@ -241,12 +244,12 @@ public class ScreenDriver extends ScreenImpl {
         } else */ {
             runWithLockedDisplayDevice( new DisplayImpl.DisplayRunnable<Object>() {
                 @Override
-                public Object run(long dpy) {
-                    vOriginSize.set(0, 0, getWidth0(dpy, screen_idx), getHeight0(dpy, screen_idx));
+                public Object run(final long dpy) {
+                    viewport.set(0, 0, getWidth0(dpy, screen_idx), getHeight0(dpy, screen_idx));
                     return null;
                 } } );
             if( DEBUG ) {
-                System.err.println("X11Screen.calcVirtualScreenOriginAndSize: Querying X11: "+ov+" -> "+vOriginSize);
+                System.err.println("X11Screen.calcVirtualScreenOriginAndSize: Querying X11: "+ov+" -> "+viewport);
             }
         }
     }
@@ -254,11 +257,11 @@ public class ScreenDriver extends ScreenImpl {
     //----------------------------------------------------------------------
     // Internals only
     //
-    private final <T> T runWithLockedDisplayDevice(DisplayRunnable<T> action) {
+    private final <T> T runWithLockedDisplayDevice(final DisplayRunnable<T> action) {
         return display.runWithLockedDisplayDevice(action);
     }
 
-    private final <T> T runWithTempDisplayHandle(DisplayRunnable<T> action) {
+    private final <T> T runWithTempDisplayHandle(final DisplayRunnable<T> action) {
         final long displayHandle = X11Util.openDisplay(display.getName());
         if(0 == displayHandle) {
             throw new RuntimeException("null device");
@@ -272,7 +275,7 @@ public class ScreenDriver extends ScreenImpl {
         return res;
     }
 
-    private final <T> T runWithOptTempDisplayHandle(DisplayRunnable<T> action) {
+    private final <T> T runWithOptTempDisplayHandle(final DisplayRunnable<T> action) {
         if( null != rAndR && rAndR.getVersion().compareTo(RandR.version130) >= 0 ) {
             return display.runWithLockedDisplayDevice(action);
         } else {
